--- a/inte/index.html
+++ b/inte/index.html
@@ -17,6 +17,12 @@
 				<div class="picture">
 					<img src="http://placekitten.com/400/120?image=1" alt="">
 				</div>
+				<a href="#" class="download-link">Download</a>
+				<ul class="technologies">
+					<li>node.js</li>
+					<li>gulp.js</li>
+					<li>stylus</li>
+				</ul>
 				<p>And I'll scream with a thousand voices... And I'll scream with a thousand voices... Go tell all your friends that this is the end. Go tell all your friends that this is the end. We ain't takin' orders from snakes no more. Walk the plank! Walk the plank! There's something in the air tonight. ...there's another case study for anthropology. My soul felt so safe up here, no self-centered natives destroying our Earth.</p>
 			</article>
 			<article>
@@ -24,6 +30,12 @@
 				<div class="picture">
 					<img src="http://placekitten.com/400/120?image=2" alt="">
 				</div>
+				<a href="#" class="download-link">Download</a>
+				<ul class="technologies">
+					<li>node.js</li>
+					<li>gulp.js</li>
+					<li>stylus</li>
+				</ul>
 				<p>What are the clouds running from? I just fell from the mothership, they said that your answers are always lying on the ocean bed. I just fell from the mothership, they said that your answers are always lying on the ocean bed. Ingrowing egos, a syntax he knows. I am sane! ...there's another case study for anthropology. Go tell all your friends that this is the end. What are the clouds running from? I just fell from the mothership, they said that your answers are always lying on the ocean bed. There's something in the air tonight.</p>
 			</article>
 			<article>
@@ -31,6 +43,12 @@
 				<div class="picture">
 					<img src="http://placekitten.com/400/120?image=3" alt="">
 				</div>
+				<a href="#" class="download-link">Download</a>
+				<ul class="technologies">
+					<li>node.js</li>
+					<li>gulp.js</li>
+					<li>stylus</li>
+				</ul>
 				<p>I ain't sayin' anything that could be construed as an apology... Tonight, I'm wide awake! I am sane! Go tell all your friends that this is the end. Ingrowing egos, a syntax he knows. Walk the plank! We ain't takin' orders from snakes no more. And I'll scream with a thousand voices... I don't understand a word you're sayin'! I am sane!</p>
 			</article>
 		</section>
